# ink-sandbox-trace

./: Guide.md  LICENSE  README.md  logs
.github/workflows/: build-ink-dap-server-bin.yaml
crates/polkavm-linker/src/: dwarf.rs
ink-dap-server/: .gitignore  README.md  main.py  requirements.txt  test_dap_client.py  test_import.py  test_simple.py
ink-dap-server/contracts/: flipper.contract  flipper.json  flipper.polkavm
ink-dap-server/src/adapter/: dap_protocol.py  debug_adapter.py
ink-dap-server/src/bridge/: rust_bridge.py
ink-dap-server/src/mapping/: source_mapper.py
ink-dap-server/src/utils/: logger.py
ink-debug-rpc/: Cargo.toml
ink-debug-rpc/src/: domain.rs  lib.rs  main.rs  methods.rs  sandbox_rpc.rs
ink-debugger/: .gitignore  Cargo.toml
ink-debugger/crates/ink/: Cargo.toml
ink-debugger/crates/ink/crates/e2e/sandbox/src/api/: revive_api.rs
ink-debugger/crates/pallet-revive-0.5.0/: .cargo_vcs_info.json  Cargo.toml
ink-debugger/crates/pallet-revive-0.5.0/src/: lib.rs
ink-debugger/crates/pallet-revive-0.5.0/src/wasm/: mod.rs  runtime.rs
ink-debugger/crates/polkavm/crates/polkavm-linker/: Cargo.toml
ink-debugger/crates/polkavm/crates/polkavm-linker/src/: program_from_elf.rs
ink-debugger/drink/src/: session.rs
ink-debugger/drink/src/session/: bundle.rs
ink-debugger/drink/test-macro/src/: contract_building.rs
ink-sandbox/: .gitignore  Cargo.toml
ink-sandbox/src/: api.rs  constants.rs  dap_handler.rs  domain.rs  main.rs  sandbox.rs  utils.rs
ink-trace-extension/: .gitignore  CHANGELOG.md  package-lock.json  package.json
ink-trace-extension/sampleWorkspace/: .gitignore  Cargo.toml  lib.rs  test.rs
ink-trace-extension/src/: InkCodeLensProvider.ts  InkDebugConfigurationProvider.ts  PythonDapLauncher.ts  extension.ts  inkDebugSession.ts  logger.ts  pythonDAPLauncher.ts
