[package]
name = "ink-debug-rpc"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
simple_logger = "4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
polkavm = { path = "../ink-debugger/crates/polkavm-0.21.0/crates/polkavm", features = ["generic-sandbox"] }
