[package]
name = "ink-debug-rpc"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
simple_logger = "4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
polkavm = { version = "0.21.0", features = ["generic-sandbox"] }
gimli = "0.32.0"
object = "0.37.2"
addr2line = "0.25.0"
