[package]
name = "flipper"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "6.0.0-alpha", default-features = false, features = ["unstable-hostfn"] }

[dev-dependencies]
ink_e2e = "6.0.0-alpha"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []

[profile.dev]
debug = true                # Включает отладочную информацию (значение по умолчанию)
debug-assertions = true     # Включает assert'ы для отладки

[profile.release]
debug = true                # Включает отладочную информацию (значение по умолчанию)
debug-assertions = true     # Включает assert'ы для отладки

