[package]
name = "flipper"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "6.0.0-alpha", default-features = false, features = ["unstable-hostfn"] }

[dev-dependencies]
drink = { path = "../../ink-debugger/drink" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std"
]
ink-as-dependency = []
